# llm-ipynb-validation-assist

./: LICENSE  README.md  compose.yaml
backend/: .dockerignore  Dockerfile  alembic.ini  entrypoint.prod.sh  entrypoint.sh  pyproject.toml
backend/app/: config.py  executor_docker.py  main.py  mongo_repo.py  mongo_store.py  pipeline_run_config.py  queue_util.py  schemas.py  seed.py  storage_client.py  telemetry.py  worker_settings.py
backend/app/api/: compare.py  credentials.py  deps_auth.py  health.py  inference_profiles.py  integrations_anytask.py  internal_runs.py  meta.py  pipelines.py  realms.py  runs.py
backend/app/runner/: __main__.py  pyproject.toml
backend/app/services/: credential_service.py  llm_proxy_client.py  pipeline_runner.py  pipeline_service.py  realm_materialize.py  run_mongo.py  run_service.py  storage_manager_client.py
backend/pipelines/llm_notebook_free/: gradelab_manifest.json  pyproject.toml
backend/pipelines/llm_notebook_free/llm_notebook_free/: main.py
backend/pipelines/llm_notebook_grader/: pyproject.toml
backend/pipelines/llm_notebook_grader/llm_notebook_grader/: __init__.py  actions.py  args.py  cli.py  data_layout.py  digest.py  free.py  git_ops.py  gradelab_free.py  gradelab_instant.py  gradelab_staged.py  inference.py  instant.py  notebook.py  parse_cells.py  reporting.py  selectors.py  task_checking.py  task_extraction.py  validation.py
backend/pipelines/llm_notebook_grader/llm_notebook_grader/prompts/: __init__.py  base.py  check.py  check_reasoning.py  extract.py  extract_reasoning.py  free.py  fullcheck.py  fullcheck_reasoning.py  instant.py  oss.py  prompt.py  report.py  validate.py
backend/pipelines/llm_notebook_instant/: Dockerfile  gradelab_manifest.json  pyproject.toml
backend/pipelines/llm_notebook_instant/llm_notebook_instant/: main.py
backend/pipelines/llm_notebook_ng/: gradelab_manifest.json  pyproject.toml
backend/pipelines/llm_notebook_ng/llm_notebook_ng/: cache.py  grading.py  images.py  inference.py  jsonio.py  main.py  notebook.py  prompts.py  report.py  rubric.py  schema.py  structure.py  validation.py
backend/pipelines/llm_notebook_staged/: gradelab_manifest.json  pyproject.toml
backend/pipelines/llm_notebook_staged/llm_notebook_staged/: main.py
backend/pipelines/mock_pipeline/: gradelab_manifest.json  pyproject.toml
backend/pipelines/mock_pipeline/mock_pipeline/: main.py
frontend/: index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: anytask.ts  client.ts  credentials.ts  inferenceProfiles.ts  meta.ts  pipelines.ts  realms.ts  runs.ts
frontend/src/components/: InsightsBar.tsx  NotebookViewer.tsx  ResultsMatrix.tsx  RunLauncher.tsx  TaskSummaryPanel.tsx
frontend/src/hooks/: useThemeState.ts
frontend/src/layouts/: MainLayout.tsx
frontend/src/lib/: viewerMerge.ts
frontend/src/pages/: AnytaskSync.tsx  Compare.tsx  Dashboard.tsx  LlmProxy.tsx  PipelineDocs.tsx  Pipelines.tsx  RealmDetail.tsx  Realms.tsx  RunDetail.tsx  Runs.tsx  Settings.tsx  StorageManager.tsx  StorageManagerDetail.tsx
frontend/src/types/: index.ts
infra/backup/: README.md  backup-minio.sh  backup-mongo.sh  backup-redis.sh  restore-mongo.sh
infra/observability/: otel-collector-config.yaml
infra/observability/loki/: loki-config.yaml
infra/observability/prometheus/: prometheus.yml
infra/observability/promtail/: promtail-config.yaml
infra/scripts/: verify-cutover.sh
services/executor_worker/: pyproject.toml
services/executor_worker/src/executor_worker/: __init__.py  worker.py
services/llm_proxy/: Dockerfile  pyproject.toml
services/llm_proxy/src/llm_proxy/: __init__.py  config.py  inference_profiles.py  main.py
services/storage_manager/: Dockerfile  pyproject.toml
services/storage_manager/src/storage_manager/: __init__.py  config.py  main.py  mongo_repo.py  mongo_store.py  realm_service.py  s3client.py  schemas.py
