[project]
name = "gradelab-backend"
version = "0.1.1"
requires-python = ">=3.12"
dependencies = [
    "gradelab-contracts",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "pymongo>=4.8.0",
    "motor>=3.5.0",
    "arq>=0.26.0",
    "boto3>=1.35.0",
]

[project.optional-dependencies]
otel = [
    "opentelemetry-sdk>=1.26.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv.sources]
gradelab-contracts = { path = "../packages/gradelab_contracts", editable = true }
