[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gradelab-llm-proxy"
version = "0.1.0"
description = "OpenAI-compatible proxy with Mongo-backed profiles"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "pymongo>=4.8.0",
]

[tool.setuptools.packages.find]
where = ["src"]
