[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gradelab-storage-manager"
version = "0.1.0"
description = "S3/MinIO API for GradeLab artifacts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "boto3>=1.35.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "python-multipart>=0.0.9",
    "pymongo>=4.8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
storage-manager = "storage_manager.main:run"
