[project]
name = "llm-notebook-ng-pipeline"
version = "0.1.5"
description = "Next-gen consistency-first notebook grading pipeline"
requires-python = ">=3.12"
dependencies = [
  "requests",
  "pillow",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["llm_notebook_ng*"]
